# ChangeLog for sci-physics/lammps
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-physics/lammps/ChangeLog,v 1.33 2014/07/14 21:05:50 nicolasbock Exp $

*lammps-20140711 (14 Jul 2014)

  14 Jul 2014; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20140711.ebuild:
  sci-physics/lammps-20140711: Version bump.

*lammps-20140628 (03 Jul 2014)

  03 Jul 2014; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20140628.ebuild:
  sci-physics/lammps: Version bump to 2014-06-28.

*lammps-20140614 (19 Jun 2014)

  19 Jun 2014; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20140614.ebuild:
  sci-physics/lammps-20140614: Version bump.

*lammps-20140320 (31 Mar 2014)

  31 Mar 2014; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20140320.ebuild:
  sci-physics/lammps-20140320: Version bump.

  17 Mar 2014; Christoph Junghans <ottxor@gentoo.org> lammps-20140314.ebuild:
  added ~x86 (tested by me)

*lammps-20140314 (15 Mar 2014)

  15 Mar 2014; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20140314.ebuild:
  sci-physics/lammps-20140314: Version bump.

*lammps-20140312 (12 Mar 2014)

  12 Mar 2014; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20140312.ebuild:
  sci-physics/lammps-20140312: Version bump.

*lammps-20140310 (11 Mar 2014)

  11 Mar 2014; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20140310.ebuild:
  sci-physics/lammps-20140310: Version bump.

*lammps-20140304 (06 Mar 2014)

  06 Mar 2014; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20140304.ebuild:
  sci-physics/lammps-20140304: Version bump.

  04 Mar 2014; Nicolas Bock <nicolasbock@gentoo.org> -lammps-20140122.ebuild,
  -lammps-20140129.ebuild:
  sci-physics/lammps: removing old versions now that 20140201 is stable.

  03 Mar 2014; Pacho Ramos <pacho@gentoo.org> lammps-20140201.ebuild:
  amd64 stable, bug #500564

  01 Mar 2014; Nicolas Bock <nicolasbock@gentoo.org> -lammps-20131201.ebuild,
  -lammps-20131216.ebuild, -lammps-20131217.ebuild: