@@ -13,6 +13,7 @@ DIST lammps-20Mar14.tar.gz 58582788 SHA256 cb2fce0cfb0066833bfe2ff5d9a3b55e83bf1
 DIST lammps-26Feb14.tar.gz 58551714 SHA256 3dd65b7396d7e30570c6070518cb78d235273acda180f65a939aa6c95c7c1412 SHA512 d8ea6ae308691cd5452265db213146fcac39a0c4139f248575e5eea394ea0c2079936a46636fcea38dcb7d68c9457f58c477fa2ee04264df628ec94a1c3c8182 WHIRLPOOL 68b40a8ddc15bac55b6295d07ef91b63755ec75707aa77d6a8654ff0ab42ad3c862884861cddc8b1cece9fe54aa153b71e9e474368455921e8c39b2d5129f94d
 DIST lammps-28Jun14.tar.gz 64598325 SHA256 3dc8f415f076c5b1563e25c06ddf360a7234c0b3428c561764a13618f80fb233 SHA512 568a00249dd88d0ad94714d2b388855376d020a34b546f9f54142b761e95515c1fce44bbbc9db2538a5a9b8335b8ac9e2905b875e954da18831087a3021df0e2 WHIRLPOOL 9d283de197c6e7216c60ed3f34bcd0a55baab925ab4d025717f1bee8a7e8b668c67bf008a9a9a807361c8f5ade36e362afdf7ac9ef6c3ed6d856389591483354
 DIST lammps-4Mar14.tar.gz 58554657 SHA256 963a486c9d0dc798d4986bd8d603d27f27042d5080320b584006c767cf3d787e SHA512 c2c2e2fe60d44ee8676753dac60166a935c3f40a3f89dc322b058090d9193c33e1682296d78add5dfc5f5b3d0796155a025c6855818ca4735960fbf2c8922ca2 WHIRLPOOL 2970c824008baa745d79b4e2f6c8d6d2ca96dbbde2be7df577cd97eef86276cd2573ab91345c64fde84aed5a6e1dc9abc6bbe7a869d5a54197c9e3fe53d19775
+DIST lammps-6Aug14.tar.gz 64806245 SHA256 844fa61c95b8bc5ae3bfdf225dfc3d562d8750d1c7b1f1601379e94c4176a682 SHA512 220113eea7f550c15a46f87e5aac2583477bbdb1faf535a221ef36cc0d0b159ebad23e0d9186e5bc9988ccc73c70e2e6af3ca719c982fdc58cf81e1cbf6c4f3a WHIRLPOOL 12fc8180bb16e612af2640f9c1b16911f3ca55ba233b2eec8cbae2c689d397d8ef52177a4bbc6388d0da18202c3795c9b8b3aa8dc4ac935e05204dc825f0dac4
 EBUILD lammps-20140201.ebuild 2467 SHA256 dabebb7bbd33a22023f218fea5331d68b2eba0666712dd080b13bfa630c4529c SHA512 944ce71a43d978909c5c0b129072cf7532cb10db4c5e6ac24cfbf85afcecac4ca9bbfafe4e147fc429c94aeecd7b4765a821c1a538267b75a045ffa1f41ebd39 WHIRLPOOL 113ebc1905299fdae5b6b5f4f57fd862e920ead05afd4f5850e341b6266f9a1a14a79d7f627d6915454b748960718ee08bfb84eea0ee1f03ec21fc28f8e73bd3
 EBUILD lammps-20140212.ebuild 3576 SHA256 c456eafcf1392e2c8cffe982cbb9f4d64e574bda3e1a9e91a8fbaf47124813a7 SHA512 c6ad5e506320af87cd8f270d494271936e3e7582ec5b7c6162cb8da15e2409747357959c9187fa047b806c8600b117cfafb1a25eca4fde845075b53bb81fc5c3 WHIRLPOOL bd8fb9a8ab1b624ae2645441a84af622371609fc5210678f06f711db510b1f5ad87959f5fa3235789399294fa3301882a7a5da273c8b13e64f72fa24c61d9ed9
 EBUILD lammps-20140214-r1.ebuild 3902 SHA256 a303f544ff66ad713291a7e029773a1d742adf9829f45ff7bd55b01adfda58e2 SHA512 516a37fc7edb448551f1cf039c0982b8b46a0a28ef67b0643ba16d0cb2ccdd43bc3bb2c3cd58cd65ff6f68f9b723e341fc27d51566afced8597503b854215f6a WHIRLPOOL 8bcbafea32a3eaf499d2c64d3df9adabda430a907a22cbdc1feaba2bd7ce17ceb834b917e07c12f7efc63cf3566134cc109abb7323b1c4ba81e91b2112c11337
@@ -27,12 +28,13 @@ EBUILD lammps-20140320.ebuild 4625 SHA256 48c1ad720a757c0a705a2d5bd4606f5435a0d3
 EBUILD lammps-20140614.ebuild 4687 SHA256 0aa9352004a2628c6d9fe1f5389750e4f0e825a608382846196bbf54aeceeff9 SHA512 79e1c338af61634db76905c93e6d477c9388d2944a3c1a62a9285ef8225e506a356bbc2e38305adcd849c70a5b46ccd947755d2213fd52de5af579e2134461b7 WHIRLPOOL 9b5f94236f7f3296a70bedd2a2de84131f841609ec346069c35a2cce4ce7f43d1ec44b20fc8f740a0e04497fd82c6b96ed5d6fb5cab1b6493af0ff195eb5e8a7
 EBUILD lammps-20140628.ebuild 4687 SHA256 3155ae3ca01dda584e43d4d1dc9f685cee0f60abd0153aaaa9e3329a888b2d8d SHA512 4dddfeae6156c1cfacf7f6992f203e614c93c2a2f223567a6b04280cf895c21567fa300152b328623b642458dd5fcc814ce41c179a736288c1ce508dc12ae800 WHIRLPOOL e96b02d538dad49bcf5e1b1df06f5fd1c7d6e67e7ba71dd2e79cce11b36a3f562b2f92a0f322052d3c3e4f3a4a5e702d1cbdd6749c193d2481a5620331b65993
 EBUILD lammps-20140711.ebuild 4687 SHA256 88a3a3caa2f795ab670db8baaed9c08f50326682381d10d3c2dcc12bf700bbea SHA512 469c448e7d2c0f2791f02057f7478714f95e1aa5c654dea648d62260c69718b1d8a5ec533957fb774ec93cff26239532004e85642fa8f4b73118b2660a415796 WHIRLPOOL 9838fc2e285422a447230d56b41327ed6058baa0ca7b129b4c0c07f3b54518e5770281ab73e4ab573b0a83b7c15920ce9fee8b4bba6090599c89d3a22165673d
-MISC ChangeLog 6088 SHA256 9c00ffae8718672b6e9bcd4ad3cc7fc7f4cc8b1351a89f7036c335e994fbe964 SHA512 74e1a43fa142dffc4a3a1eda4900cf8c7fa701b10ab60db0836dd9fdbb0a22b9131765c13a1f8f17a6e38c8bf431bfd0afd27babfa73654f86b78f0fd1b21c46 WHIRLPOOL 46304297b34ac78fa2e5ec8423aea47da1b92f26d2e8b0af2f1f9fcc3354da7a8c2cc302ee845ac6b08a9c439fb75d9bc39d6d4d7fb00f6066fd6c2df8b5ad57
+EBUILD lammps-20140806.ebuild 4687 SHA256 73d662e2a56966e1f8c4f1126f5823e28a87e10a03d189a41a6c1614f24e4a7d SHA512 4afb5a8e54f6be4dc0bb20e4109642ae1ec7c10c63b74064c7f1cee5c13d7060287ddcb06076fe037c8e5f366d12595da80c883fc5677150f5ab34cb85477c3e WHIRLPOOL d3089a683909d8b94f9720278c11afb2f3dc067778bee87a8a84ae5a23284eb5c27f1e58471630cb85baadbd3fed0f2449f841a933fe82b0ae9f2f6bc42f8e62
+MISC ChangeLog 6249 SHA256 30429027b075551373b3200d4e5587fd4de7d813a24ea246262fbbb94c6fcb63 SHA512 8c9ab1417dd03bd3674504afc6b510b0a378dbf88577434fda025c52f658a1f9e9718a885cbabd8b3ddc2e1cf9ffb498da86d4732e15faf905faf00ff664c52f WHIRLPOOL 6a633b3bf03c8c9be68f83ea53d8ce1e045bf3cf5977e653cd25b483e02004cf4139611cd2106443110e0eae7211796c6dcbe3d776b8eba10027691603ca92ca
 MISC metadata.xml 1584 SHA256 4d06db7368b155db1484a6c0792a366b37541260e700248ccf542e5fe28ffbc7 SHA512 b0bbd1fdd37e35ccc0cd4d34bb9afa09910b56a14daa078148aefcce4dc13408c1a5d5a40b865a37bc917764f5b91e266256b9ca83e0f8009859d955b68fe6a8 WHIRLPOOL ff65f1a03910b4fa5758d5537d898c733971e5f339dcd8150bc1596dfcf490b4de2be7f520405a47274e1e9827eddc3d8a1324f2f169d575d1e4584dc01e9787
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPERjEACgkQf15tZKyRylIrowCgkkACOtK7pAedxk+uVEAVO9bj
-lYEAn1fCsiaudsFltJd8RTlmJGWW0dyV
-=5p/F
+iEYEAREIAAYFAlPjmNIACgkQf15tZKyRylL4HgCgyU3kOoTDPzVGLuKoKKnYmSJR
+NwQAnRXu2Z33p+wzfO7Sg4T/lGVYx0FJ
+=0KnM
 -----END PGP SIGNATURE-----
