@@ -1,6 +1,11 @@
 # ChangeLog for sci-physics/lammps
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/lammps/ChangeLog,v 1.33 2014/07/14 21:05:50 nicolasbock Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/lammps/ChangeLog,v 1.34 2014/08/07 15:18:38 nicolasbock Exp $
+
+*lammps-20140806 (07 Aug 2014)
+
+  07 Aug 2014; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20140806.ebuild:
+  sci-physics/lammps-20140806: Added new version.
 
 *lammps-20140711 (14 Jul 2014)
 
